# etap

./: .gitignore  README.md
action/: Action.py  __init__.py
action_server/: README.md  as.py
client/: ExampleRuleDFA.java  README.md  client.py
dtap-lib/: CMakeLists.txt  action_prot.h  dtaplib.cpp  dummy_circ.h  trigger_prot.h
emp_src/: CMakeLists.txt  action_prot.h  client_prot.h  cloud_prot.h  dfa.h  func_reader.h  state.h  trigger_prot.h  utils.h
emp_src/dfa/: dfa1.txt  dfa104.txt  dfa104r.txt  dfa16_1.txt  dfa16_2.txt  dfa16_2r.txt  dfa2.txt  dfa4.txt  dfa5.txt  dfa5_2.txt  dfa6.txt  dfa6_2.txt  dfa9.txt  dfa9r.txt
emp_src/test/: action.cpp  client.cpp  dfa_replace.cpp  func_reader.cpp  tap.cpp  trigger.cpp
etaplib/: README.md  action.py  bench_original_client.py  client.py  etap.py  logger.py  test_trigger.py  trigger.py
etaplib/action_server/: as.py  run.sh
etaplib/emp_utils/: CMakeLists.txt  decoder_prot.h  dummy_circ.h  encoder_prot.h  utils.cpp
etaplib/rules/: README.md
etaplib/rules/blueprints/: 01.hjson  07.hjson  08.hjson
etaplib/rules/dfa_files/: 02  04  05  06  07  09  z.01  z.08  z.16  z.18.3  z.20  z.25  z.26  z.45.1  z.48
etaplib/tap_server/: run.sh  tap.py
etaplib/trigger_server/: run.sh  ts.py
example_impl/client/: client_helper.py
example_impl/server-action/: server-action.py
example_impl/server-platform/: __init__.py  db.py  db_platform.sql  server.py
example_impl/server-trigger/: helper.py  server-trigger.py
example_proxy/: action_proxy.py  trigger_proxy.py
examples/client/: client.py
examples/server-action/: __init__.py  server-action.py  server.py
examples/server-platform/: server.py  tap.py
examples/server-trigger/: __init__.py  helper.py  server-trigger-vanilla.py  server-trigger.py  server.py
oblivtap/: __init__.py  action.py  trigger.py
oblivtap/emp/: CMakeLists.txt  trigger.cpp  trigger_prot.h
prototype/: CMakeLists.txt  README.md  action_prot.h  client_circ.h  client_prot.h  tap_prot.h  trigger_prot.h
prototype/test/: action.cpp  client.cpp  ot.cpp  tap.cpp  trigger.cpp
rules/: README.md
rules/blueprints/ifttt/: 02  04  06
rules/dfa_files/: 01  10  z.06  z.09  z.18.1  z.18.2  z.18.4  z.27  z.30  z.45.2  z.46  z.47
scripts/: install_emp-tool.sh  install_pybind11.sh
tap_server/: README.md  run.sh  tap.py
trigger/: Trigger.py  __init__.py
trigger_server/: README.md  run.sh  ts.py
(+48 files in other folders)
